<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="12dp"
    android:background="@drawable/add_task_background"
    tools:context=".Task">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:text="@string/title_label" />

        <EditText
            android:id="@+id/editTxtTaskTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:background="@drawable/add_task_input_text_background"
            android:ems="10"
            android:hint="@string/task_title_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#78909C"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:gravity="start"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:text="@string/details_label" />

        <TextView
            android:id="@+id/txtSetDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:text="@string/set_date_label"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabSetDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/set_calendar_date"
            app:borderWidth="0dp"
            app:srcCompat="@drawable/ic_action_calendar"
            app:tint="@color/white"
            tools:ignore="SpeakableTextPresentCheck"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextTaskContent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="6dp"
            android:layout_weight="1"
            android:background="@drawable/add_task_input_text_background"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/task_content_hint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColorHint="#757575" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSave"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_task"
                android:textColor="#D500F9" />

            <Button
                android:id="@+id/btnCancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="#D500F9" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>